# cf-lia-ciencia-datos

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
adquisicion-datos/: _quarto.yml  index.qmd
analisis-exploratorio-datos/: _quarto.yml  about.qmd  aed.ipynb  carga.qmd  correlaciones.qmd  descriptivo.qmd  dimensionalidad.qmd  index.qmd  intro.qmd
analisis-exploratorio-datos/data/: imeca1996.xls  imeca1997.xls  imeca1998.xls  imeca1999.xls  imeca2000.xls  imeca2001.xls  imeca2002.xls  imeca2003.xls  imeca2004.xls  imeca2005.xls  imeca2006.xls  imeca2007.xls  imeca2008.xls  imeca2009.xls  imeca2010.xls  imeca2011.xls  imeca2012.xls  imeca2013.xls  imeca2014.xls  imeca2015.xls  imeca2016.xls  imeca2017.xls  imeca2018.xls  imeca2019.xls  imeca2020.xls  imeca2021.xls  imeca2022.xls
analisis-inicial/: _quarto.yml  about.qmd  analisis_inicial.qmd  atipicos.qmd  contenido.qmd  estructura.qmd  index.qmd  intro.qmd  limpieza.qmd
analisis-inicial/data/: air_quality_uci1.parquet  air_quality_uci2.parquet  air_quality_uci3.parquet
aprendizaje-automatico-1/: _quarto.yml
aprendizaje-automatico-1/_site/: about.html  index.html  search.json
aprendizaje-automatico-1/_site/site_libs/bootstrap/: bootstrap.min.css
aprendizaje-automatico-2/: _quarto.yml
control-versiones-automatizacion/: _quarto.yml
python-ciencia-datos/: _quarto.yml  index.qmd
