[project]
name = "cf-lia-data-science"
version = "0.1.0"
description = "Ciencia de Datos con Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "pip>=24.2",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
    "xlrd>=2.0.1",
]
